v3.18 - Not yet released

- ADDED: Support for PerkinElmer file format

- TWEAK: Additional menu shortcuts


v3.17 - Friday, October 28, 2005

- ADDED: Support for Deltavision file format
- ADDED: Support for Leica file format
- ADDED: Zeiss ZVI reader metadata parsing
- ADDED: Partial support for multiple dimensional axes per file
- ADDED: Ability to view OME-XML/OME-TIFF metadata in dataset metadata viewer

- TWEAK: Smarter autodetection of dimensional axis types


v3.16 - Monday, October 17, 2005

- TWEAK: Differentiate between QuickTime for Java missing versus expired

- FIXED: Report thumbnail recomputation properly when data objects are altered


v3.15 - Friday, October 14, 2005

- ADDED: Separate task tracking for each background task VisBio is performing
- ADDED: Rearrange main VisBio window to be more streamlined

- TWEAK: Added plugins folder for use with ImageJ from within VisBio
- TWEAK: Report more information during initial dataset creation
- TWEAK: Don't create errors.log unless necessary
- TWEAK: Eliminate some debugging messages from the output console
- TWEAK: Better error messages when QuickTime is not installed

- FIXED: Bug in non-image data objects (arbitrary slices, overlays)
- FIXED: Ignore thumbnails in Zeiss LSM images
- FIXED: Better detection of QuickTime v7.0 for Windows
- FIXED: Ignore first image of an Openlab file only if it is "Original Image"


v3.11 - Monday, October 10, 2005

- FIXED: Bug in Zeiss LSM reader
- FIXED: Bug in Metamorph STK reader with multi-image files
- FIXED: Ugly status messages with volume rendering and ImageRendererJ3D


v3.10 - Monday, October 3, 2005

- ADDED: Support for IPLab file format
- ADDED: Better support for Zeiss LSM, Metamorph STK and Fluoview TIFF

- TWEAK: Quicker initial processing of multi-file datasets
- TWEAK: More efficient image display in many cases (using ImageRendererJ3D)

- FIXED: Disallow "In 3D" display option when Java3D is not installed


v3.09 - Monday, July 25, 2005
